--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 <html>
-<head></head>
-<title>False Alarm</title>
-<body>
-uijkhkhjjhkjjh
-</body>
+<title></title>
 
-<p id="a">asfasfs</p>
-
-
-</body>
-
-
+<body>adsfasdfasdf</body>
 </html>
