some changes to UI

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ $(document).ready(function() {
 <body>
 
 <h2>Greetings</h2>
-<div class="container" style="width:500px" style="float: right">
+<div class="container" style="width:400px; float: right" background-color = "grey" >
 <label for="usr">Search Hashtag and click on Ok</label>
   <input type="text" class="form-control" id="usr">
   <Button id = "btn"> Ok </Button>
