--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
 
 
 
-<div>hi</div>
+
 
 
 <script>
+  var imgurl = "";
   var socket = io('http://localhost:8300');
   socket.on('news', function (data) {
     console.log(data);
+    if (data.hello.entities.media[0]){
+        imgurl = data.hello.entities.media[0].media_url
+        $('#mypic').attr("src", imgurl);
+      console.log(data.hello.entities.media[0].media_url);
+     }
     $('#inner').append("</br>")
     $('#inner').append(data.hello.text);
+
 
     
 
@@ -25,12 +32,14 @@
   });
 </script>
 
+
 <script>
 $(document).ready(function() {
   $(function(){
     $('#btn').on('click', function(){
         var inputtag = usr.value;
         console.log(inputtag);
+
         socket.emit('message', inputtag);
     });
 });
@@ -39,11 +48,11 @@ $(document).ready(function() {
 </script>
 
 </head>
+<body style= "background-color: #ADD8E6">
 
-<body>
-
-<h2>Greetings</h2>
-<div class="container" style="width:400px; float: right" background-color = "grey" >
+<h2>Finding out</h2>
+<img src = "" id="mypic">
+<div class="container" style="width:400px; background-color: #87CEFA; float: right" background-color = "grey" >
 <label for="usr">Search Hashtag and click on Ok</label>
   <input type="text" class="form-control" id="usr">
   <Button id = "btn"> Ok </Button>
