--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   var socket = io('http://localhost:8300');
   socket.on('news', function (data) {
     console.log(data);
-    if (data.hello.entities.media[0]){
+    if (data.hello.entities.hasOwnProperty('media')){
         imgurl = data.hello.entities.media[0].media_url
         $('#mypic').attr("src", imgurl);
       console.log(data.hello.entities.media[0].media_url);
      }
 
 
-     
+
     $('#inner').append("</br>")
     $('#inner').append(data.hello.text);
-    $('#number').text(data.number_of_tweets);
+    // $('#number').text(data.number_of_tweets);
 
 
     
