--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
 
 
+    
+    $('#inner').prepend(data.hello.text);
     $('#inner').append("</br>")
-    $('#inner').append(data.hello.text);
     // $('#number').text(data.number_of_tweets);
 
 
@@ -64,7 +65,7 @@ $(document).ready(function() {
 <label for="usr">Search Hashtag and click on Ok</label>
   <input type="text" class="form-control" id="usr">
   <Button id = "btn"> Ok </Button>
-  <div id="inner">Here are your tweets</div>
+  <div id="inner" style="height:400px; overflow:scroll;">Here are your tweets</div>
   
 </div>
 
